//// CAMT Report Generator — Corporate Reporting Agreement Schema

// ─────────────────────────────────────────────────────────────────────────────
// REFERENCE TABLES — STATUS & LOOKUP
// ─────────────────────────────────────────────────────────────────────────────

Table AgreementVersionStatus {
  Code        nvarchar(15)    [pk]
  Description nvarchar(100)   [not null]

  note: "Reference table for AgreementVersion.Status. Allowed values: DRAFT | ACTIVE | SUPERSEDED | DRAFT_CANCEL | CANCELLED | EXPIRED"
}

Table AgreementScopeStatus {
  Code        nvarchar(15)    [pk]
  Description nvarchar(100)   [not null]

  note: "Reference table for AgreementScope.Status. Allowed values: DRAFT | ACTIVE | CANCELLED"
}

Table ProductPart {
  Code        nvarchar(40)    [pk]
  Description nvarchar(100)   [not null]

  note: "Reference table for AgreementScope.ProductPart and ReportConfig.ReportType. Allowed values: CAMT052_BALANCES_ONLY | CAMT052_BALANCES_TX | CAMT053_STANDARD | CAMT053_EXTENDED | CAMT054_DEBIT | CAMT054_CREDIT"
}

Table PaymentType {
  Code        nvarchar(40)    [pk, note: "e.g. CREDIT_TRANSFER, DIRECT_DEBIT, INSTANT_PAYMENT"]
  Description nvarchar(100)   [not null, note: "Human-readable description of the payment type."]

  note: "Reference table. Drives the FK on PaymentTypeAssignment.PaymentType."
}

// ─────────────────────────────────────────────────────────────────────────────
// PHASE (A) — AGREEMENT MANAGEMENT
// ─────────────────────────────────────────────────────────────────────────────

Table Agreement {
  Id             nvarchar(20)      [pk, note: "Stable across all versions. One-time generated value e.g. 6xxxxxREPxxx"]
  Name           nvarchar(35)   [not null, note: "Frozen after creation — never updated across versions"]
  BankId        nvarchar(5)   [not null, note: "Bank ID"]
  CorporateId   nvarchar(15)   [not null, note: "External corporate customer identifier"]
  CreatedAt     datetime2 [not null]
  Channel         nvarchar(20)   [not null, note: "Channel through which the agreement was established. E.g., INTERNET_BANK, CUSTOMER_PORTAL, OTHERS. Useful for reporting and auditing purposes."]

  note: "Stable anchor record. One row per agreement regardless of how many versions exist."
}

Table AgreementContact {
  Id                   bigint      [pk]
  AgreementId         nvarchar(20)      [not null, ref: > Agreement.Id]
  ContactName         nvarchar(40)   [not null]
  ContactEmail        nvarchar(50)   [not null]
  ContactPhone        nvarchar(15)   [not null]
  CreatedAt           datetime2 [not null]

  note: "Editable per agreement. At least one contact required. Contacts are always current, not versioned"
}

Table AgreementVersion {
  Id                       bigint        [pk, note: "Increments on each edit or cancel. Starts at 1. Globally unique identity across all agreements"]
  AgreementId              nvarchar(20)  [not null, ref: > Agreement.Id]
  Status                   nvarchar(15)  [not null, ref: > AgreementVersionStatus.Code]
  PricingOrderRef          nvarchar(20)  [not null, note: "Always stored. Updated per version."]
  ExpiredAt                datetime2     [note: "GAP: Set by nightly job when cart item expires without approval."]
  CreatedAt                datetime2     [not null]
  ActivatedAt              datetime2     [note: "Set when status → ACTIVE"]
  SupersededAt             datetime2     [note: "Set when a newer version is approved"]
  CancelledAt              datetime2     [note: "Set when status → CANCELLED"]

  indexes {
    // Filtered unique index — only one ACTIVE version per agreement at any time
    (AgreementId) [unique, name: "UX_AgreementVersion_Active", note: "Enforced at application layer for filtered uniqueness on Status = 'ACTIVE'. In SQL: CREATE UNIQUE INDEX ... WHERE Status = 'ACTIVE'"]

    // Performance index for version lookups by agreement + status
    (AgreementId, Status) [name: "IX_AgreementVersion_Agreement"]
  }

  note: "One row per version. Exactly one ACTIVE version per agreement at any time. SUPERSEDED = previously active, now replaced."
}

Table AgreementScope {
  Id                      bigint        [pk]
  AgreementVersionId      bigint        [not null, ref: > AgreementVersion.Id]
  MessageRecipientId      nvarchar(20)  [not null, note: "SignerID. Fetched from corporate connect API."]
  ProductPart             nvarchar(40)  [not null, ref: > ProductPart.Code, note: "CAMT052_BALANCES_ONLY | CAMT052_BALANCES_TX | CAMT053_STANDARD | CAMT053_EXTENDED | CAMT054_DEBIT | CAMT054_CREDIT"]
  Status                  nvarchar(15)  [not null, ref: > AgreementScopeStatus.Code]
  CreatedAt               datetime2     [not null]
  ActivatedAt             datetime2     [note: "Set when parent version is approved and version status = ACTIVE"]
  CancelledAt             datetime2     [note: "For replaced or removed: set immediately at edit time, not on approval. For full agreement cancel: set on approval when parent version status = CANCELLED."]

  indexes {
    // No duplicate (recipient + product part) combinations per version
    (AgreementVersionId, MessageRecipientId, ProductPart) [unique, name: "UX_AgreementScope_Unique"]

    // Performance: scope lookups by version
    (AgreementVersionId) [name: "IX_AgreementScope_Version"]

    // Performance: scope lookups by recipient (used by ReportConfig linkage)
    (MessageRecipientId) [name: "IX_AgreementScope_Recipient"]
  }

  note: "CANCELLED scope rows carry no AccountAssignment rows — their assignments are readable from the prior version."
}

Table PaymentTypeAssignment {
  Id                         bigint       [pk]
  AgreementScopeId           bigint       [not null, ref: > AgreementScope.Id]
  PaymentType                nvarchar(40) [not null, ref: > PaymentType.Code]
  CreatedAt                  datetime2    [not null]

  indexes {
    // No duplicate payment type per scope
    (AgreementScopeId, PaymentType) [unique, name: "UX_PaymentTypeAssignment_Unique"]

    // Performance: assignment lookups by scope
    (AgreementScopeId) [name: "IX_PaymentTypeAssignment_Scope"]
  }
}

Table AccountAssignment {
  Id                         bigint       [pk]
  PaymentTypeAssignmentId    bigint       [not null, ref: > PaymentTypeAssignment.Id, note: "Always populated. For CAMT054_CREDIT: references a real payment type. For all other product parts: references a default payment type row inserted at scope creation time. Use AgreementScope.ProductPart to distinguish."]
  AccountBBAN                nvarchar(15) [not null, note: "Fetched from accounts API. No exclusivity constraint — same AccountBBAN can appear across multiple recipients for the same ProductPart within a version."]
  AccountIBAN                nvarchar(35) [not null]
  Currency                   nvarchar(3)  [not null]
  CreatedAt                  datetime2    [not null]

  indexes {
    // Performance: account lookups by payment type assignment
    (PaymentTypeAssignmentId) [name: "IX_AccountAssignment_PaymentType"]
  }
}

Table AliasAssignment {
  Id                         bigint       [pk]
  PaymentTypeAssignmentId    bigint       [not null, ref: > PaymentTypeAssignment.Id, note: "Only populated for CAMT054_CREDIT payment type assignments. Always null for all other product parts. Use AgreementScope.ProductPart to distinguish."]
  AliasId                    nvarchar(15) [not null]
  CreatedAt                  datetime2    [not null]

  note: "Aliases for a CAMT054_CREDIT payment type assignment."
}

Table CartItem {
  Id                    bigint       [pk]
  AgreementVersionId    bigint       [not null, ref: - AgreementVersion.Id, note: "One cart item per version"]
  CorporateId           nvarchar(15) [not null, note: "Consistent with Agreement.CorporateId"]
  ExpiresAt             datetime2    [not null, note: "30 days from creation"]
  ApprovedAt            datetime2    [note: "Set when customer approves from cart"]
  ExpiredAt             datetime2    [note: "Set by nightly job when ExpiresAt is breached. Cascades to AgreementVersion.status = EXPIRED."]
  CreatedAt             datetime2    [not null]

  indexes {
    // Enforces one-to-one with AgreementVersion (mirrors the ref: -)
    (AgreementVersionId) [unique, name: "UX_CartItem_Version"]

    // Performance: nightly expiry job scans by ExpiresAt
    (ExpiresAt) [name: "IX_CartItem_ExpiresAt"]
  }

  note: "One cart item per version. A DRAFT and a DRAFT_CANCEL can coexist in cart for the same agreement simultaneously. Items are accessible for 30 days across browser sessions."
}

// ─────────────────────────────────────────────────────────────────────────────
// PHASE (B) — REPORT GENERATION & DELIVERY
// ─────────────────────────────────────────────────────────────────────────────

Table ReportConfig {
  Id                        bigint       [pk]
  ReportType                nvarchar(40) [not null, ref: > ProductPart.Code, note: "This is ProductPart. Denormalised from AgreementScope for easy querying without joins."]
  ReportVersion             nvarchar(3)  [not null, note: "Version of the report."]
  ReportFrequency           nvarchar(35) [not null, note: "30_MIN | 1_HOUR | 2_HOUR | 4_HOURS. Determines how often this report should be generated for SCHEDULED triggers. Not relevant for ON_DEMAND triggers."]
  Description               nvarchar(80) [not null, note: "Description of the report."]
  MessageRecipientId        nvarchar(20) [not null, note: "Identifier for the message recipient. Fetched from corporate connect API. Matches AgreementScope.MessageRecipientId — not a FK as that column is non-unique."]
  MessageRecipientType      nvarchar(15) [not null, note: "Type of message recipient (e.g., SIGNER, BIC, OTHER)."]
  AccountFormat             nvarchar(4)  [not null, note: "IBAN | BBAN. Determines which account identifier to include in the report based on the agreement scope."]
  IsActive                  bit          [not null, default: false, note: "Set to true when the report is ready for generation. Allows for pre-configuration of reports before they go live."]
  IsPaginated               bit          [not null, default: false, note: "Whether the report should be split into multiple files if it exceeds a certain number of records. If true, the stored procedure must handle pagination logic based on the report_version field."]
  IsEmptyReportAllowed      bit          [not null, default: false, note: "Whether to generate and deliver a report if there are no transactions/accounts in scope for the reporting date. If false, the system will skip generation and delivery for that cycle if the report would be empty."]
  IsBundled                 bit          [not null, default: false, note: "Whether the report is bundled with other reports for delivery."]
  CreatedAt                 datetime2    [not null]
  CreatedBy                 nvarchar(20) [not null, note: "userId of the creator. Useful for audit and debugging purposes."]
  UpdatedAt                 datetime2    [not null]
  UpdatedBy                 nvarchar(20) [not null, note: "userId of the last updater. Useful for audit and debugging purposes. Updated on every edit to the report configuration."]

  indexes {
    // Performance: filter report configs by recipient
    (MessageRecipientId) [name: "IX_ReportConfig_MessageRecipientId"]
  }
}

Table ReportAgreementScope {
  Id                 bigint       [pk]
  ReportConfigId     bigint       [not null, ref: > ReportConfig.Id]
  AgreementScopeId   bigint       [not null, ref: > AgreementScope.Id]
  AgreementId        nvarchar(20) [not null, ref: > Agreement.Id, note: "Denormalised for easier querying without joins. Consistent with agreement.id. Useful for filtering report configurations by agreement across versions."]

  indexes {
    // No duplicate report config + scope mapping
    (ReportConfigId, AgreementScopeId) [unique, name: "UX_ReportAgreementScope_Unique"]

    // Performance: filter by agreement (across versions)
    (AgreementId) [name: "IX_ReportAgreementScope_Agreement"]

    // Performance: filter by scope
    (AgreementScopeId) [name: "IX_ReportAgreementScope_Scope"]
  }

  note: "Join table linking report configurations to agreement scopes. Allows for many-to-many relationships between reports and scopes, enabling flexible report generation based on various agreement configurations."
}
